--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Yahoo!ニュース 見出しビューワー</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.min.js"></script>
-    <script src="sketch.js"></script>
+    <script src="sketch.js"></script> <!-- ✅ ここだけでOK -->
     <style>
       body {
         font-family: sans-serif;
@@ -16,6 +16,5 @@
   </head>
   <body>
     <h1>Yahoo!ニュース 見出し</h1>
-    <script src="sketch.js"></script>
   </body>
 </html>
